--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,84 +28,78 @@ spec:
     actuationTool:
       flavor: Terraform
       version: ">= 1.3"
-    description:
-      tagline: This is an auto-generated module.
-      detailed: This module was generated from
-      preDeploy: To deploy this blueprint you must have an active billing account and billing permissions.
+    description: {}
     icon: assets/icon.png
     costEstimate:
-      description: Blueprint cost details
-      url: https://cloud.google.com/products/calculator?id=02fb0c45-cc29-4567-8cc6-f72ac9024add
+      description: The major cost is in Cloud Composer Airflow. Cloud Build, Cloud Storage, Artifact Repository, and BigQuery are all costs that scale up and down with your usage, while Cloud Composer has minimum fixed costs depending on your side. It scales up with more work.
   content:
     architecture:
       diagramUrl: https://www.link-to-architecture-diagram.com
       description:
-      - 1. Architecture description step no. 1
-      - 2. Architecture description step no. 2
-      - 3. Architecture description step no. N
+        - 1. Architecture description step no. 1
+        - 2. Architecture description step no. 2
+        - 3. Architecture description step no. N
     documentation:
-    - title: Hosting a Static Website
-      url: https://cloud.google.com/storage/docs/hosting-static-website
+      - title: Hosting a Static Website
+        url: https://cloud.google.com/storage/docs/hosting-static-website
     examples:
-    - name: dbt_job
-      location: examples/dbt_job
+      - name: dbt_job
+        location: examples/dbt_job
   interfaces:
     variables:
-    - name: bq_datasets
-      description: The BQ datasets to create
-      varType: list
-      defaultValue: null
-      required: true
-    - name: bq_location
-      description: The BQ location where the datasets will be created
-      varType: string
-      defaultValue: null
-      required: true
-    - name: enable_vertexai
-      description: Whether to enable Vertex AI API and services
-      varType: bool
-      defaultValue: false
-    - name: gcs_location
-      description: The GCS location where the buckets will be created
-      varType: string
-      defaultValue: null
-      required: true
-    - name: goog_packaged_solution
-      description: Google packaged solution label
-      varType: string
-      defaultValue: gcp-dbt-composer
-    - name: monitoring_dataset
-      description: Dataset for monitoring activity
-      varType: string
-      defaultValue: monitoring
-    - name: project_id
-      description: The project ID to deploy to
-      varType: string
-      defaultValue: null
-      required: true
-    - name: region
-      description: The region for Cloud Composer
-      varType: string
-      defaultValue: null
-      required: true
+      - name: bq_location
+        description: The BQ location where the datasets will be created
+        varType: string
+        defaultValue: null
+        required: true
+      - name: composer_version
+        description: Version of Cloud Composer
+        varType: string
+        defaultValue: composer-2.4.6-airflow-2.6.3
+      - name: env_variables
+        description: Variables of the airflow environment.
+        varType: map(string)
+        defaultValue: {}
+      - name: gcs_location
+        description: The GCS location where the buckets will be created
+        varType: string
+        defaultValue: null
+        required: true
+      - name: goog_packaged_solution
+        description: Google packaged solution label
+        varType: string
+        defaultValue: gcp-dbt-composer
+      - name: monitoring_dataset
+        description: Dataset for monitoring activity
+        varType: string
+        defaultValue: monitoring
+      - name: project_id
+        description: The project ID to deploy to
+        varType: string
+        defaultValue: null
+        required: true
+      - name: region
+        description: The region for Cloud Composer
+        varType: string
+        defaultValue: null
+        required: true
     outputs:
-    - name: airflow_dag_gcs_prefix
-      description: Airflow GCS DAG prefix
-    - name: airflow_gke_cluster
-      description: Airflow GKE Cluster
-    - name: airflow_uri
-      description: Airflow URI
-    - name: data_gcs_bucket
-    - name: docs_gcs_bucket
-    - name: ingest_gcs_bucket
-    - name: lookerstudio_create_dashboard_url
-    - name: registry_url
+      - name: airflow_dag_gcs_prefix
+        description: Airflow GCS DAG prefix
+      - name: airflow_gke_cluster
+        description: Airflow GKE Cluster
+      - name: airflow_uri
+        description: Airflow URI
+      - name: docs_gcs_bucket
+        description: Documentation bucket
+      - name: lookerstudio_create_dashboard_url
+        description: Looker Studio template dashboard
   requirements:
     roles:
-    - level: Project
-      roles:
-      - roles/owner
+      - level: Project
+        roles:
+          - roles/owner
     services:
-    - cloudresourcemanager.googleapis.com
-    - storage-api.googleapis.com
-    - serviceusage.googleapis.com
+      - cloudresourcemanager.googleapis.com
+      - storage-api.googleapis.com
+      - serviceusage.googleapis.com
